--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Renewal Summary Verification — Charity One</title>
+    <title>Renewal Review Summary & Confirmation</title>
 
     <!-- Style -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
 
   <!-- Form Title -->
     <div class="form-title">
-        <h1 class="title" for="orgName">Renewal Summary Verification</h1>
+        <h1 class="title" for="orgName">Renewal Review Summary & Confirmation</h1>
     </div>
 
   <main class="container" role="main">
